# machycore

./: .gitignore  .gitmodules  README.md
api/: CMakeLists.txt
api/include/: api.h  machyapi.h
api/src/: api.cpp  machyapi.cpp
examples/: CMakeLists.txt  main.cpp
machyapi/: CMakeLists.txt
machyapi/include/: machyapi.h
machyapi/src/: machyapi.cpp
machycam/: CMakeLists.txt
machycam/include/: machycam.h
machycam/src/: machycam.cpp
machycontrol/: CMakeLists.txt
machycontrol/include/: machycontrol.h
machycontrol/src/: machycontrol.cpp
machycore/: CMakeLists.txt
machycore/include/: envs.h  machycore.h
machycore/libs/boost-build/: CMakeLists.txt
machycore/libs/boost-build/libs/: atomic.cmake
machycore/src/: machycore.cpp
machygl/: CMakeLists.txt
machygl/include/: machygl.h
machygl/src/: machygl.cpp
machypose/: CMakeLists.txt
machypose/include/: machypose.h
machypose/src/: machypose.cpp
machyscenes/: CMakeLists.txt
machyscenes/include/: machyscene.h
machyvision/: CMakeLists.txt
machyvision/include/: machyvision.h
machyvision/src/: machyvision.cpp
manualcontrol/: CMakeLists.txt
manualcontrol/include/: xcontroller.h
manualcontrol/src/: xcontroller.cpp
